Conformance/Compiler/testsuite/src/tests/14_metaprogramming/02_macros/02_macro_invocation/a19/test_a19_02.cj
/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
 * This source file is part of the Cangjie project, licensed under Apache-2.0
 * with Runtime Library Exception.
 * 
 * See https://cangjie-lang.cn/pages/LICENSE for license information.
 */
/*
  @Name:         14_02_02_a19_02

  @Level:         1

  @Assertion:    14.2.2(19) Macros are visible only during compilation.  

  @Description:  Check that macro not visible in runtime
   
  @Mode:         compileonly

  @Negative:     yes

  @Structure:    complex-main

  @Dependencies: ../aux_macros.cj

*/

import std.ast.*
import aux_macros.*

main(): Unit {
    @compile(\@compile(var a = 1))  // error: Code generated by macro 'compile' should not have macro call.
}
